--- a/package.json
+++ b/package.json
@@ -1,24 +1,50 @@
 {
-  "name": "temp_init",
-  "version": "0.1.0",
+  "name": "parth-kaushik-portfolio",
+  "version": "2.0.0",
   "private": true,
+  "description": "Personal portfolio featuring interactive 3D experiences, games with real leaderboards, physics simulations, message board, and stunning animations. Built with Next.js 16, SQLite, and JWT authentication.",
+  "author": "Parth Kaushik",
+  "keywords": ["portfolio", "nextjs", "react", "games", "3d", "sqlite", "authentication"],
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "next": "16.1.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@vercel/kv": "^3.0.0",
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^12.6.2",
+    "canvas-confetti": "^1.9.4",
+    "framer-motion": "^12.26.2",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.3",
+    "next": "16.1.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-masonry-css": "^1.0.16",
+    "three": "^0.182.0",
+    "uuid": "^13.0.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
